--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,38 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.app {
+  display: flex;
+}
+
+.main {
+  flex-basis: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+.search {
+  padding: 10px;margin-right: 5px;}
+
+.search input {
+  width: 100%;
+  height: 40px;
+  font-size: 24px;
+  color: #999;
+  padding-left: 5px;
+}
+
+.map {
+  flex-grow: 1;
+  height: 100vh;
+  top: 0;
+  position: sticky;
+}
+
+.flats {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
 }
